--- a/hackathon_portal/templates/project.html
+++ b/hackathon_portal/templates/project.html
@@ -1,3 +1,10 @@
-Project Page.
-
-{{ project_name }}
+{% extends "base.html" %}
+{% block title %{{ project_name }}{% endblock %}
+{% block head %}
+    {{ super() }}
+{% endblock %}
+{% block header %}
+     <h2>{{ project_name }}</h2>
+{% endblock %}
+{% block content %}
+{% endblock %}
