--- a/hackathon_portal/templates/base.html
+++ b/hackathon_portal/templates/base.html
@@ -2,18 +2,23 @@
 <head>
     {% block head %}
     {# <link rel="stylesheet" href={{ get_static_url("css/reset.css") }} type="text/css"/> #}
-    {# <link rel="stylesheet" href={{ get_static_url("css/default.css") }} type="text/css"/> #}
     <link rel="stylesheet" href={{ get_static_url("bootstrap/css/bootstrap.css") }}>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href={{ get_static_url("css/default.css") }} type="text/css"/> 
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
 </head>
 <body>
-    <div id="header">{% block header %} <h1>Yelp Hackathon</h1> {% endblock %}</div>
-    <div id="content">{% block content %}{% endblock %}</div>
-    <div id="footer">
-        {% block footer %}
-             Hackathon 10 Project - Hackathon Portal by chao, imalison, jchuah, jkotker, ssridhar
-        {% endblock %}
+    <div id="wrapper">
+        <div id="header">{% block header %} <h1><span>Yelp//</span>Hackathon</h1> {% endblock %}</div>
+        <div id="content">
+            {% block content %}{% endblock %}
+        </div>
+        <div id="footer">
+            {% block footer %}
+                 Hackathon 10 Project - Hackathon Portal by chao, imalison, jchuah, jkotker, ssridhar
+            {% endblock %}
+        </div>
     </div>
 </body>
 
