--- a/hackathon_portal/static/css/default.css
+++ b/hackathon_portal/static/css/default.css
@@ -44,6 +44,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #content-header{
 	border-bottom: 1px solid #d9d9d9;
+	margin-bottom: 15px;
 }
 
 #content-header h2{
@@ -61,8 +62,9 @@ em{
 	color: #999999;
 }
 
-ul{
+#project-boxes{
 	list-style: none;
+	margin: 0;
 }
 
 .project-box{
@@ -72,5 +74,9 @@ ul{
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
 	float: left;
-	margin: 0 0 5px 5px;
+	margin: 0 10px 5px 0;
+}
+
+.project-box:nth-of-type(3n){
+	margin-right: 0;
 }
