--- a/hackathon_portal/templates/hackathon.html
+++ b/hackathon_portal/templates/hackathon.html
@@ -9,7 +9,7 @@
         <h2>Hackathon {{ hackathon_id }}</h2>
 	<p><em>3/16/2013</em></p>
     </div>
-    <ul>
+    <ul class="clearfix" id="project-boxes">
         {% for project in project_list %}
             <li class="project-box" style="background-image: {{ project['cover_img'] }}">
                 <h3>{{ project['title']  }}</h3>
