--- a/hackathon_portal/templates/base.html
+++ b/hackathon_portal/templates/base.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href={{ get_static_url("bootstrap/css/bootstrap.css") }}>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href={{ get_static_url("css/default.css") }} type="text/css"/> 
+    <link rel="stylesheet" href={{ get_static_url("css/project.css") }} type="text/css"/> 
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
 </head>
