--- a/hackathon_portal/templates/edit_project.html
+++ b/hackathon_portal/templates/edit_project.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div id="content-header">
         <h2>{{ project.name }}</h2>
-        <em><a href="/{{ project.hackathon_id }}">Hackathon {{ project.hackathon_id }}</a></em>
+        <em><a href="project/{{ project.id }}">< Back to project page</a></em>
     </div>
     <label>Description</label>
     <p>{{ project.description }}</p>
@@ -27,3 +27,4 @@
     </form>
 
 {% endblock %}
+
