--- a/hackathon_portal/templates/project.html
+++ b/hackathon_portal/templates/project.html
@@ -21,13 +21,13 @@
     <label>Photos</label>
     <p>
         {% for photo in project.photos %}
-             <img src="{{ photo.filepath }}" />
+             <img src="{{ photo.url }}" />
         {% endfor %}
     </p>
     <span class="drop-down-labal">Upload Photo</span>
-    <form name="input" action="/upload_image_for_project/" method="post">
-        <input type="file" name="photo>
-        <input type="hidden" name="project_id" value={{ project.id }}>
+    <form name="input" action="/upload_photo_for_project/" method="post" enctype="multipart/form-data">
+        <input type="file" name="photo">
+        <input type="hidden" name="project_id" value="{{ project.id }}">
         <input type="submit" value="Submit">
     </form>
 
