--- a/hackathon_portal/static/css/default.css
+++ b/hackathon_portal/static/css/default.css
@@ -12,6 +12,8 @@ body {
 	background-color: #c41200;
 	margin: 10px 0;
 	position: relative;
+	border: 1px solid #c41200;
+	border-radius: 0 13px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -24,9 +26,10 @@ h1, h2, h3, h4, h5, h6 {
 	font-size: 46px;
 	position: absolute;
 	bottom: -2px;
-	right: -3px;
+	right: -4px;
 	margin: 0;
 	text-transform: uppercase;
+	line-height: 1;
 }
 
 #header h1 span{
@@ -70,13 +73,45 @@ em{
 .project-box{
 	height: 300px;
 	width: 314px;
-	background-color: yellow;
+	background: url('http://ww2.hdnux.com/photos/07/55/27/2020857/5/628x471.jpg') no-repeat;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
 	float: left;
 	margin: 0 8px 8px 0;
+	position: relative;
+	cursor: pointer;
+}
+
+.project-box h3 {
+	margin: 0;
+	background: rgba(0, 0, 0, 0.5);
+	color: #fff;
+	padding: 0 4px;
 }
 
 .project-box:nth-of-type(3n){
 	margin-right: 0;
+}
+
+.project-box .more-info {
+	background: rgba(0, 0, 0, 0.5);
+	color: #ccc;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	display: none;
+}	
+
+.project-box .project-desc {
+	width: 303px;
+	padding: 2px 5px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	margin-bottom: 5px;
+}
+
+.project-box .hacker-names {
+	padding: 2px 5px;
+	font-size: 11px;
 }
