move edits to project

--- a/hackathon_portal/templates/base.html
+++ b/hackathon_portal/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="wrapper">
-        <div id="header">{% block header %} <h1><span>Yelp//</span>Hackathon</h1> {% endblock %}</div>
+        <a href="/1"><div id="header">{% block header %} <h1><span>Yelp//</span>Hackathon</h1> {% endblock %}</div></a>
         <div id="content">
             {% block content %}{% endblock %}
         </div>
