--- a/hackathon_portal/templates/base.html
+++ b/hackathon_portal/templates/base.html
@@ -6,6 +6,9 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href={{ get_static_url("css/default.css") }} type="text/css"/> 
     <link rel="stylesheet" href={{ get_static_url("css/project.css") }} type="text/css"/> 
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script "text/javascript" src={{ get_static_url("bootstrap/js/bootstrap.js")}}></script>
+    <script "text/javascript" src={{ get_static_url("js/project_box.js")}}></script>
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
 </head>
