slideToggle is working

--- a/hackathon_portal/templates/base.html
+++ b/hackathon_portal/templates/base.html
@@ -9,6 +9,7 @@
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script "text/javascript" src={{ get_static_url("bootstrap/js/bootstrap.js")}}></script>
     <script "text/javascript" src={{ get_static_url("js/project_box.js")}}></script>
+    <script "text/javascript" src={{ get_static_url("js/project_update.js")}}></script>
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
 </head>
