autocomplete working without proper list

--- a/hackathon_portal/templates/base.html
+++ b/hackathon_portal/templates/base.html
@@ -10,6 +10,10 @@
     <script "text/javascript" src={{ get_static_url("bootstrap/js/bootstrap.js")}}></script>
     <script "text/javascript" src={{ get_static_url("js/project_box.js")}}></script>
     <script "text/javascript" src={{ get_static_url("js/project_update.js")}}></script>
+
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
+    <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
 </head>
