--- a/hackathon_portal/templates/project.html
+++ b/hackathon_portal/templates/project.html
@@ -29,7 +29,7 @@
     <p>{{ project.members_string }}</p>
     <span class="edit" value="update-members">[add member]</span>
     <form class="hide" id="update-members" action="{{ project.add_person }}" method="post">
-        <input id="member-input" type="text" name="member" class="input-xxlarge" />
+        <input id="member-input" type="text" name="person" class="input-xxlarge" />
         <input type="hidden" name="project_id" value="{{ project.id }}">
         <input type="submit" value="Add">
     </form>
