Late night work. added image fetcher.

--- a/hackathon_portal/templates/project.html
+++ b/hackathon_portal/templates/project.html
@@ -26,7 +26,11 @@
     
 
     <label>Members</label>
-    <p>{{ project.members_string }}</p>
+    <p>
+    {% for person in project.persons %}
+    <a href="{{ person.url }}"> {{ person.__str__() }}</a>
+    {% endfor %}
+    </p>
     <span class="edit" value="update-members">[add member]</span>
     <form class="hide" id="update-members" action="{{ project.add_person_url }}" method="post">
         <input id="member-input" type="text" name="person" class="input-xxlarge" />
