--- a/hackathon_portal/static/css/default.css
+++ b/hackathon_portal/static/css/default.css
@@ -21,12 +21,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header h1{
-    color: #fff;
+    color: #f0f1f2;
     font-family: 'Roboto Condensed', san-serif;
     font-size: 46px;
     position: absolute;
-    bottom: -2px;
-    right: -4px;
+    bottom: -6px;
+    right: -5px;
     margin: 0;
     text-transform: uppercase;
     line-height: 1;
@@ -71,25 +71,31 @@ em{
 }
 
 .project-box{
-    height: 300px;
+    height: 314px;
     width: 314px;
     -webkit-border-radius: 5px;
     border-radius: 5px;
     float: left;
     margin: 0 8px 8px 0;
     position: relative;
-    cursor: pointer;
     background-position: center;
     background-repeat: no-repeat;
     background-color: black;
     background-size: 100% auto;
 }
 
+.project-box a {
+   display: block;
+   height: 100%;
+   width: 100%;
+   text-decoration: none;
+}
+
 .project-box h3 {
     margin: 0;
     background: rgba(0, 0, 0, 0.5);
     color: #fff;
-    padding: 0 4px;
+    padding: 0 8px;
 }
 
 .project-box:nth-of-type(3n){
