--- a/hackathon_portal/templates/hackathon.html
+++ b/hackathon_portal/templates/hackathon.html
@@ -18,12 +18,18 @@
       >
       <a href="{{ project.url }}">
 	<h3>{{ project.name }}</h3>
-      <div class="more-info">
-	<p class="project-desc">{{ project.description }}</p>
-	<div class="hacker-names">
-	  {{ project.members_string }}
+	<div class="more-info">
+		<p class="project-desc">{{ project.description }}</p>
+		<div class="hacker-names">
+			{% for i in range(len(project.persons)) %}
+				{% if not i == range(len(project.persons))[-1] %}
+					{{ project.persons[i].yelp_handle }},
+				{% else %}
+					{{ project.persons[i].yelp_handle }}
+				{% endif %}
+			{% endfor %}
+		</div>
 	</div>
-      </div>
       </a>
     </li>
   {% endfor %}
