Made image thumbnails work.

--- a/hackathon_portal/templates/hackathon.html
+++ b/hackathon_portal/templates/hackathon.html
@@ -13,7 +13,7 @@
   {% for project in hackathon.projects %}
     <li class="project-box"
 	{% if len(project.photos) > 0 %}
-      style="background-image: url('{{ project.photos[0].url }}')"
+      style="background-image: url('{{ project.photos[0].thumbnail_url }}')"
       {% endif %}
       >
       <a href="{{ project.url }}">
