--- a/hackathon_portal/templates/person.html
+++ b/hackathon_portal/templates/person.html
@@ -20,7 +20,13 @@
         <div class="more-info">
             <p class="project-desc">{{ project.description }}</p>
             <div class="hacker-names">
-                {{ project.members_string }}
+	      {% for i in range(len(project.persons)) %}
+	      {% if not i == range(len(project.persons))[-1] %}
+	      {{ project.persons[i].yelp_handle }},
+	      {% else %}
+	      {{ project.persons[i].yelp_handle }}
+	      {% endif %}
+	      {% endfor %}
             </div>
         </div>
     </a>
