--- a/hackathon_portal/templates/base.html
+++ b/hackathon_portal/templates/base.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div id="wrapper">
-        <a href="/1"><div id="header">{% block header %} <h1><span>Yelp//</span>Hackathon</h1> {% endblock %}</div></a>
+        <a href="/1"><div id="header">{% block header %} <h1><span>Yelp</span>Hackathon</h1> {% endblock %}</div></a>
         <div id="content">
             {% block content %}{% endblock %}
         </div>
