Fixed title bug.

--- a/hackathon_portal/templates/hackathon.html
+++ b/hackathon_portal/templates/hackathon.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Hackathon {{ hackathon.id }}{% endblock %}
+{% block title %}Hackathon {{ hackathon.number }}{% endblock %}
 {% block head %}
     {{ super() }}
 {% endblock %}
