--- a/hackathon_portal/templates/base.html
+++ b/hackathon_portal/templates/base.html
@@ -25,7 +25,7 @@
         </div>
         <div id="footer">
             {% block footer %}
-                 Hackathon 10 Project - Hackathon Portal by chao, imalison, jchuah, jkotker, ssridhar
+                 Hackathon 10 Project - Hackathon Portal by chao, imalison, jchuah, jkotker, pcheng, ssridhar
             {% endblock %}
         </div>
     </div>
