Made awards factory.

--- a/hackathon_portal/templates/person.html
+++ b/hackathon_portal/templates/person.html
@@ -11,9 +11,7 @@
 <ul class="clearfix" id="project-boxes">
     {% for project in person.projects %}
     <li class="project-box"
-    {% if len(project.photos) > 0 %}
-    style="background-image: url('{{ project.photos[0].thumbnail_url }}')"
-    {% endif %}
+    style="background-image: url('{{ project.get_photo().thumbnail_url }}')"
     >
     <a href="{{ project.url }}">
         <h3>{{ project.name }}</h3>
